# schemas

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  default.nix  hie.yaml  schemas.cabal  shell.nix
.github/workflows/: integration.yaml
example/: Person.hs  Person2.hs  Person3.hs  Person4.hs  Walkthrough.lhs
nix/: default.nix  sources.json
nix/haskell/: default.nix  hackage.nix
nix/nixpkgs/: default.nix
src/: Schemas.hs
src/Control/: Prism.hs
src/Schemas/: Attempt.hs  Class.hs  Delay.hs  Internal.hs  OpenApi2.hs  SOP.hs  Untyped.hs
test/: Generators.hs  Looper.hs  SchemasSpec.hs  Unions.hs
test/Schemas/: OpenApi2Spec.hs  SOPSpec.hs
