cabal-version:       2.0
name:                schemas
version:             0.1.0.0
synopsis:            schema guided serialization
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Pepe Iborra
maintainer:          pepeiborra@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Schemas
  default-extensions:  TypeApplications
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                     , aeson
                     , barbies
                     , bifunctors
                     , bytestring
                     , generic-lens
                     , lens
                     , lens-aeson
                     , profunctors
                     , scientific
                     , text
                     , unordered-containers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example
  default-language:    Haskell2010
  default-extensions:  TypeApplications
  hs-source-dirs:      example
  main-is:             Person.hs
  other-modules:       Person2, Person3
  build-depends:       aeson, barbies, base, schemas, generic-lens, pretty-simple

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       SchemasSpec
  build-depends:       aeson, barbies, base, schemas, generic-lens, hspec
